--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "cucumber-test": "cucumber-js",
     "mocha-test": "mocha test",
-    "jest-test": "jest test"
+    "jest-test": "jest test",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "dependencies": {
     "chai": "^4.3.7",
     "cucumber": "^6.0.7",
+    "express": "^4.18.2",
     "jest": "^29.6.2",
     "mocha": "^10.2.0"
   }
